# anki-decks

./: .gitignore  pyproject.toml
anki_decks/: common.py  dutch_words.py
anki_decks/templates/: dutch-words-back.html  dutch-words-front.html
data/: dutch-words-to-check.txt  dutch-words.txt
tests/: test_anki_decks.py
