[tool.poetry]
name = "anki-decks"
version = "0.1.0"
description = ""
authors = ["Gaganpreet <gaganpreet.arora@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
genanki = "^0.8.0"
wiktionaryparser = "^0.0.97"
jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
lxml = "^4.5.0"
jupyter = "^1.0.0"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
